chore: update SPDX copyright statements across multiple documents

--- a/docs-kits/kits/data-trust-and-security-kit/success-stories/dpp-verification-success-story.mdx
+++ b/docs-kits/kits/data-trust-and-security-kit/success-stories/dpp-verification-success-story.mdx
@@ -73,5 +73,8 @@ If the verification is done by attribute, this same information + the "Validatio
 This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).
 
 - SPDX-License-Identifier: CC-BY-4.0
+- SPDX-FileCopyrightText: 2025 BMW AG
 - SPDX-FileCopyrightText: 2025 Contributors to the Eclipse Foundation
+- SPDX-FileCopyrightText: 2025 CGI Deutschland B.V. & Co. KG
+
 - Source URL: [https://github.com/eclipse-tractusx/eclipse-tractusx.github.io](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io)
