--- a/docs/release/trg-1/trg-1-05.md
+++ b/docs/release/trg-1/trg-1-05.md
@@ -28,4 +28,4 @@ In order to pragmatically start or update your Architecture documentation, consu
 - Provide each chapter of the arc42 documentation as single `.md` file named after the chapter
 - Favor diagrams as mermaid block in `.md` files directly over image files, where possible
 - Have a look to peer repositories within Tractus-X for inspiration
-- Anchor a link to your architecture documentation within your `README.md` (see [TRG 1.01](https://eclipse-tractusx.github.io/docs/release/trg-1/trg-1-1))
+- Anchor a link to your architecture documentation within your `README.md` (see [TRG 1.01](/docs/release/trg-1/trg-1-01))
