--- a/docs/release/trg-1/trg-1-07.md
+++ b/docs/release/trg-1/trg-1-07.md
@@ -24,6 +24,6 @@ End user manual is essential for providing user assistance and ensuring a positi
 
 - Favor diagrams as mermaid block in `.md` files directly over image files, where possible
 - Have a look to peer repositories within Tractus-X for inspiration
-- Anchor a link to your end user manual within your `README.md` (see [TRG 1.01](https://eclipse-tractusx.github.io/docs/release/trg-1/trg-1-1))
+- Anchor a link to your end user manual within your `README.md` (see [TRG 1.01](/docs/release/trg-1/trg-1-01))
 - Within the documentation consider role specifics of end users for better understanding
 - If your application has an UI, make the documentation available within the document
