adapt links to trgs

--- a/docs/release/trg-8/trg-8-04.md
+++ b/docs/release/trg-8/trg-8-04.md
@@ -34,7 +34,7 @@ Findings appear in the GitHub Advanced Security Dashboard. Dismiss high/error fi
 
 Address high severity findings; it is recommended to also address medium severity findings.
 
-Due to IP considerations, base images with findings must not be updated arbitrarily, as outlined in [TRG4](https://eclipse-tractusx.github.io/docs/release/trg-4/trg-4-02).
+Due to IP considerations, base images with findings must not be updated arbitrarily, as outlined in [TRG4](/docs/release/trg-4/trg-4-02).
 
 :::
 
