chore(TRG-7-0x): provide more details and examples for less misinterpretation space

--- a/docs/release/trg-7/trg-7-05.md
+++ b/docs/release/trg-7/trg-7-05.md
@@ -2,10 +2,11 @@
 title: TRG 7.05 - Legal information for distributions
 ---
 
-| Status | Created     | Post-History                  |
-|--------|-------------|-------------------------------|
-| Active | 25-Apr-2024 | Updates for CC-BY-4.0 license |
-| Active | 13-Apr-2023 | New                           |
+| Status | Created     | Post-History                     |
+| ------ | ----------- | -------------------------------- |
+| Active | 15-Aug-2025 | Add Handling of LICENSE_non_code |
+| Active | 25-Apr-2024 | Updates for CC-BY-4.0 license    |
+| Active | 13-Apr-2023 | New                              |
 
 ## Why
 
@@ -24,6 +25,10 @@ The following legal doc files must be included in every distribution artifact:
 - NOTICE.md
 - DEPENDENCIES file(s) - if existing
 - recommended: SECURITY.md
+
+In case you're including non-code artefacts like documentation (e.g. in an application frontend as a user guide; see e.g. [TRG 1.07](./../trg-1/trg-1-07.md)) the following files must be included in the distribution artifact:
+
+- LICENSE_non_code
 
 In the most general case, these files will appear in the root of distribution unit, but the exact location varies by technology type.
 For content delivered as Java archive (JAR) files, for example, the legal files should be placed in the META-INF directory.
