docs: fix typos

--- a/docs/release/trg-7/trg-7-00.md
+++ b/docs/release/trg-7/trg-7-00.md
@@ -41,7 +41,7 @@ Before submitting a PR, contributors should verify compliance with the requireme
     - diagram as code like `.puml`
   - the year in the copyright section per company must be set to the year of their first contribution
 - IP checks for project content: [TRG 7.03](/docs/release/trg-7/trg-7-03)
-  - for each PR containing more than 1000 relevant lines there **must** be an approved [IP review for Code Contributions](/docs/oss/issues#eclipse-gitlab-ip-issue-tracker) before the contribution can be pushed/merged. THis applies especially to contributors. Committers - per committer agreement - are trusted to consider their own IP and third-party IP correctly. They may exceed that limit but are heavily encouraged to create an IP issue for large PRs or more complex IP questions.
+  - for each PR containing more than 1000 relevant lines there **must** be an approved [IP review for Code Contributions](/docs/oss/issues#eclipse-gitlab-ip-issue-tracker) before the contribution can be pushed/merged. This applies especially to contributors. Committers - per committer agreement - are trusted to consider their own IP and third-party IP correctly. They may exceed that limit but are heavily encouraged to create an IP issue for large PRs or more complex IP questions.
 - IP checks for 3rd party content: [TRG 7.04](/docs/release/trg-7/trg-7-04)
   - DEPENDENCIES file is up-to-date and reflects the current use of the 3rd party content
   - all libraries listed there should have the status "approved"
