docs(trg-7-00.md): fix .class mention to .java

--- a/docs/release/trg-7/trg-7-00.md
+++ b/docs/release/trg-7/trg-7-00.md
@@ -37,7 +37,7 @@ Before submitting a PR, contributors should verify compliance with the requireme
 - License and copyright header: [TRG 7.02](/docs/release/trg-7/trg-7-02)
   - must be present in every file if possible. Example files below
     - infrastructure as code and test data like `.yaml`
-    - code files like `.class`, `.py`, `.go`
+    - code files like `.java`, `.py`, `.go`
     - diagram as code like `.puml`
   - the year in the copyright section per company must be set to the year of their first contribution
 - IP checks for project content: [TRG 7.03](/docs/release/trg-7/trg-7-03)
