chore(TRG-7-0x): provide more details and examples for less misinterpretation space (#1339)
* chore(TRG-7-0x): provide more details and examples for less misinterpretation space

* docs: fix typos

* docs(trg-7-00.md): fix .class mention to .java

--- a/docs/release/trg-7/trg-7-00.md
+++ b/docs/release/trg-7/trg-7-00.md
@@ -2,11 +2,12 @@
 title: TRG 7.00 - Recurring activities for each PR
 ---
 
-| Status | Created     | Post-History                         |
-|--------|-------------|--------------------------------------|
-| Active | 25-Apr-2024 | Updates for CC-BY-4.0 license        |
-| Active | 20-Jul-2023 | References to TRG 7.07, 7.08 updated |
-|        | 13-Apr-2023 | Moved from OSS Development           |
+| Status | Created     | Post-History                                                            |
+| ------ | ----------- | ----------------------------------------------------------------------- |
+| Active | 15-Aug-2025 | Update of header years, add examples and further IP check clarification |
+| Active | 25-Apr-2024 | Updates for CC-BY-4.0 license                                           |
+| Active | 20-Jul-2023 | References to TRG 7.07, 7.08 updated                                    |
+|        | 13-Apr-2023 | Moved from OSS Development                                              |
 
 ## Why
 
@@ -34,10 +35,13 @@ Before submitting a PR, contributors should verify compliance with the requireme
 
 - Legal Documentation: [TRG 7.01](/docs/release/trg-7/trg-7-01)
 - License and copyright header: [TRG 7.02](/docs/release/trg-7/trg-7-02)
-  - must be present in every file if possible
-  - update the year in the copyright section at the beginning of each new year
+  - must be present in every file if possible. Example files below
+    - infrastructure as code and test data like `.yaml`
+    - code files like `.java`, `.py`, `.go`
+    - diagram as code like `.puml`
+  - the year in the copyright section per company must be set to the year of their first contribution
 - IP checks for project content: [TRG 7.03](/docs/release/trg-7/trg-7-03)
-  - for each PR containing more than 1000 relevant lines there **must** be an approved [IP review for Code Contributions](/docs/oss/issues#eclipse-gitlab-ip-issue-tracker) before the contribution can be pushed/merged
+  - for each PR containing more than 1000 relevant lines there **must** be an approved [IP review for Code Contributions](/docs/oss/issues#eclipse-gitlab-ip-issue-tracker) before the contribution can be pushed/merged. This applies especially to contributors. Committers - per committer agreement - are trusted to consider their own IP and third-party IP correctly. They may exceed that limit but are heavily encouraged to create an IP issue for large PRs or more complex IP questions.
 - IP checks for 3rd party content: [TRG 7.04](/docs/release/trg-7/trg-7-04)
   - DEPENDENCIES file is up-to-date and reflects the current use of the 3rd party content
   - all libraries listed there should have the status "approved"
