--- a/docs/release/trg-7/trg-7-04.md
+++ b/docs/release/trg-7/trg-7-04.md
@@ -2,10 +2,11 @@
 title: TRG 7.04 - IP checks for 3rd party content
 ---
 
-| Status | Created     | Post-History                  |
-|--------|-------------|-------------------------------|
-| Active | 25-Apr-2024 | Updates for CC-BY-4.0 license |
-| Active | 13-Apr-2023 | Moved from OSS Development    |
+| Status | Created     | Post-History                              |
+| ------ | ----------- | ----------------------------------------- |
+| Active | 15-Aug-2025 | Provide further ehancements for workflows |
+| Active | 25-Apr-2024 | Updates for CC-BY-4.0 license             |
+| Active | 13-Apr-2023 | Moved from OSS Development                |
 
 ## Why
 
@@ -80,6 +81,10 @@ Make sure to also include test dependencies. For a maven-based java project you 
           <!-- see https://repo.eclipse.org/content/repositories/dash-licenses/org/eclipse/dash/license-tool-plugin/ -->
           <version>1.0.2</version>
           <configuration>
+            <!-- allows you to skip the license check in specific conditions like docker build by specifying -DskipLicenseCheck -->
+            <skip>${skipLicenseCheck}</skip>
+            <!-- reduce 429 error of cleary defined that's likelier due to too big batches -->
+            <batch>100</batch>
             <projectId>automotive.tractusx</projectId>
             <!-- name of dependencies file -->
             <summary>DEPENDENCIES</summary>
