fixed broken link

--- a/docs-kits/kits/industry-core-kit/software-development-view/digital-twins.mdx
+++ b/docs-kits/kits/industry-core-kit/software-development-view/digital-twins.mdx
@@ -328,7 +328,7 @@ autonumber
  }
 ```
 
-See also full example here: [edc-asset for file transfer](https://eclipse-tractusx.github.io/docs-kits/kits/Quality-Kit/Software%20Development%20View/Specification%20Quality%20Kit/)
+See also full example here: [edc-asset for file transfer](https://eclipse-tractusx.github.io/docs-kits/kits/data-driven-quality-management-kit/software-operation-view#quality-data-offers-at-edc)
 
 3. `Provider` creates another EDC asset for Submodel pointing to Aspect Model `BinaryExchange`. This aspect model will contain the information (dspAssetId, dataplane URL and controlplane URl) for AmazonS3 EDC asset created by provider in step 3.
 4. `Provider` creates a shell with Shell Descriptors and the edc Asset with controlplane URL. This Shell Descriptor contains the Submodel Descriptor which refers to EDC asset created in step 4.
