adaptation after review

--- a/blog-changelog/2023-03-03-release-3-0-0.md
+++ b/blog-changelog/2023-03-03-release-3-0-0.md
@@ -6,9 +6,14 @@ description: "Highlights and changes for Tractus-X Release 3.0.0."
 tags: [release, changelog]
 ---
 
+:::note
+This release versioning has not yet been following calendar versioning ([CalVer](https://calver.org/)).
+:::
+
 ## [3.0.0] - 2023-03-03
 
 ### Added
+
 - [Connector KIT](https://eclipse-tractusx.github.io/docs/category/connector-kit/), v1.0.0
 - [Business Partner KIT](https://eclipse-tractusx.github.io/docs/category/business-partner-kit/), v1.0.0
 - [Data Chain KIT](https://eclipse-tractusx.github.io/docs/kits/data-chain-kit/changelog/), v1.0.0
@@ -17,6 +22,7 @@ tags: [release, changelog]
 - [Trace-X Traceability Application](https://github.com/eclipse-tractusx/traceability-foss-frontend), v1.1.0
 
 ### Changed
+
 - [Autosetup Service](https://github.com/eclipse-tractusx/autosetup-backend), Frontend v1.4.7, Backend v1.4.6
 - [Digital Twin Registry](https://github.com/eclipse-tractusx/sldt-digital-twin-registry), v0.2.0-M3-multi-tenancy
 - [Dynamic Attribute Provisioning Service (DAPS)](https://github.com/eclipse-tractusx/daps-helm-chart/), v1.7.1
@@ -30,6 +36,7 @@ tags: [release, changelog]
 - [Semantic Hub](https://github.com/eclipse-tractusx/sldt-semantic-hub), v0.1.0-M3
 
 ### Known knowns
+
 - Relevant components and interfaces developed considering [Gaia-X](https://gaia-x.eu/) Trust Framework - 22.10
   Connection to an external Clearing House service for the entire Catena-X ecosystem required.
   The [Gaia-X](https://gaia-x.eu/) compliance service should generally be capable to recognize all companies that are able to register with the Catena-X Portal.
@@ -41,6 +48,10 @@ tags: [release, changelog]
 - Security concept (overall) recommended for Operations
 
 ### Runtime
+
 - Tested on [Kubernetes](https://en.wikipedia.org/wiki/Kubernetes) versions: `1.24.6`
 - Tested with [PostgreSQL](https://en.wikipedia.org/wiki/PostgreSQL) versions: `14`
 
+:::tip
+For installation details, please see the referenced Repositories / Releases.
+:::
