--- a/blog-changelog/2023-03-24-release-3-0-1.md
+++ b/blog-changelog/2023-03-24-release-3-0-1.md
@@ -6,9 +6,14 @@ description: "Highlights and changes for Tractus-X Release 3.0.1."
 tags: [release, changelog]
 ---
 
+:::note
+This release versioning has not yet been following calendar versioning ([CalVer](https://calver.org/)).
+:::
+
 ## [3.0.1] - 2023-03-24
 
 ### Added
+
 - n/a
 
 ### Fixed
@@ -69,5 +74,7 @@ helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
 helm repo update tractusx-dev
 helm search repo tractusx-dev --versions
 ```
-For installation details, please see the referenced Repositories / Releases.
 
+:::tip
+For installation details, please see the referenced Repositories / Releases.
+:::
