--- a/blog-changelog/2023-12-08-release-23-12.md
+++ b/blog-changelog/2023-12-08-release-23-12.md
@@ -43,6 +43,7 @@ tags: [release, changelog]
 | [Traceability KIT](https://eclipse-tractusx.github.io/docs-kits/category/traceability-kit) | n/a | [3.0.0](https://eclipse-tractusx.github.io/docs-kits/kits/traceability-kit/adoption-view/) |
 
 ### Unchanged, untested
+
 All components listed here have not seen any update since their previous Release. No specific regression tests executed.
 
 | Component | Helm Chart (s) | App-/KIT Version (s) |
@@ -85,5 +86,7 @@ helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
 helm repo update tractusx-dev
 helm search repo tractusx-dev --versions
 ```
-For installation details, please see the referenced Repositories / Releases.
 
+:::tip
+For installation details, please see the referenced Repositories / Releases.
+:::
