--- a/blog-changelog/2024-03-08-release-24-03.md
+++ b/blog-changelog/2024-03-08-release-24-03.md
@@ -96,5 +96,7 @@ helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
 helm repo update tractusx-dev
 helm search repo tractusx-dev --versions
 ```
-For installation details, please see the referenced Repositories / Releases.
 
+:::tip
+For installation details, please see the referenced Repositories / Releases.
+:::
