--- a/blog-changelog/2024-12-02-release-24-12.md
+++ b/blog-changelog/2024-12-02-release-24-12.md
@@ -70,4 +70,6 @@ helm repo update tractusx-dev
 helm search repo tractusx-dev --versions
 ```
 
+:::tip
 For installation details, please see the referenced Repositories / Releases.
+:::
