--- a/blog-changelog/2025-03-19-release-25-03.md
+++ b/blog-changelog/2025-03-19-release-25-03.md
@@ -96,5 +96,10 @@ Implemented features can be found [here](https://github.com/orgs/eclipse-tractus
 - with [PostgreSQL](https://en.wikipedia.org/wiki/PostgreSQL) versions: `15.4.0.` or more specific `15.4.0-debian-11-r45`
 - the EDC version [0.9.0-rc2](https://github.com/eclipse-tractusx/tractusx-edc/releases/tag/0.9.0-rc2) was used for testing
 
-Note: Tractus-X EDC has been tested on both Postgresql versions: 15.x and 16.x
+:::note
+Tractus-X EDC has been tested on both Postgresql versions: 15.x and 16.x
+:::
 
+:::tip
+For installation details, please see the referenced Repositories / Releases.
+:::
