--- a/blog-changelog/2025-06-16-release-25-06.md
+++ b/blog-changelog/2025-06-16-release-25-06.md
@@ -94,5 +94,11 @@ The following runtime has been used during end-to-end test:
 - EDC version [0.10.0](https://github.com/eclipse-tractusx/tractusx-edc/releases/tag/0.10.0)
 - DTR version [0.8.0](https://github.com/eclipse-tractusx/sldt-digital-twin-registry/releases/tag/v0.8.0)
 
-Note: Tractus-X EDC has been tested on both Postgresql versions: 15.x and 16.x
+:::note
+Tractus-X EDC has been tested on both Postgresql versions: 15.x and 16.x
+:::
+
+:::tip
+For installation details, please see the referenced Repositories / Releases.
+:::
 
