--- a/blog-changelog/2022-12-21-release-2-1-0.md
+++ b/blog-changelog/2022-12-21-release-2-1-0.md
@@ -6,9 +6,14 @@ description: "Highlights and changes for Tractus-X Release 2.1.0."
 tags: [release, changelog]
 ---
 
+:::note
+This release versioning has not yet been following calendar versioning ([CalVer](https://calver.org/)).
+:::
+
 ## [2.1.0] - 2022-12-21
 
 ### Added
+
 - [Portal](https://github.com/eclipse-tractusx/portal-frontend), v0.6.0
 - [Managed Identity Wallet (MIW)](https://github.com/eclipse-tractusx/managed-identity-wallets), v2.1.0
 - [Simple Data Exchanger (SDE)](https://github.com/eclipse-tractusx/dft-frontend), v1.7.0
@@ -19,6 +24,7 @@ tags: [release, changelog]
 - [Item Relationship Service (IRS)](https://github.com/eclipse-tractusx/item-relationship-service), v1.3.0
 
 ### Known knowns
+
 - Developed considering [Gaia-X](https://gaia-x.eu/) Trust Framework - 22.04
 - FOSS components developed and pre-tested to TRL6 with artificial test data only
 - Restricted crosscheck of functionality in verification environment:
@@ -32,6 +38,10 @@ tags: [release, changelog]
 - GeoBlocking recommended for Operations (GBaaS)
 
 ### Runtime
+
 - Tested on [Kubernetes](https://en.wikipedia.org/wiki/Kubernetes) versions: `1.24.3`
 - Tested with [PostgreSQL](https://en.wikipedia.org/wiki/PostgreSQL) versions: `14`
 
+:::tip
+For installation details, please see the referenced Repositories / Releases.
+:::
