--- a/blog-changelog/2023-05-17-release-3-1-0.md
+++ b/blog-changelog/2023-05-17-release-3-1-0.md
@@ -6,6 +6,10 @@ description: "Highlights and changes for Tractus-X Release 3.1.0."
 tags: [release, changelog]
 ---
 
+:::note
+This release versioning has not yet been following calendar versioning ([CalVer](https://calver.org/)).
+:::
+
 ## [3.1.0] - 2023-05-17
 
 ### Added
@@ -73,5 +77,7 @@ helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
 helm repo update tractusx-dev
 helm search repo tractusx-dev --versions
 ```
-For installation details, please see the referenced Repositories / Releases.
 
+:::tip
+For installation details, please see the referenced Repositories / Releases.
+:::
