--- a/blog-changelog/2023-09-08-release-23-09.md
+++ b/blog-changelog/2023-09-08-release-23-09.md
@@ -85,5 +85,7 @@ helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
 helm repo update tractusx-dev
 helm search repo tractusx-dev --versions
 ```
-For installation details, please see the referenced Repositories / Releases.
 
+:::tip
+For installation details, please see the referenced Repositories / Releases.
+:::
