update issue linking

--- a/blog-changelog/2025-09-29-release-25-09.md
+++ b/blog-changelog/2025-09-29-release-25-09.md
@@ -11,7 +11,7 @@ hide_table_of_contents: false
 
 Our community and results/releases depends on our contributors. **We want to thank everyone who has contributed** to this release by reporting issues, discussing solutions, writing code, or reviewing contributions.
 
-### Contributors (63)
+### Contributors (62)
 
 [![sm29105](https://images.weserv.nl/?url=github.com/sm29105.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/sm29105)
 [![gomezbc](https://images.weserv.nl/?url=github.com/gomezbc.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/gomezbc)
@@ -30,7 +30,6 @@ Our community and results/releases depends on our contributors. **We want to tha
 [![tfjanjua](https://images.weserv.nl/?url=github.com/tfjanjua.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/tfjanjua)
 [![samuelroywork](https://images.weserv.nl/?url=github.com/samuelroywork.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/samuelroywork)
 [![SanaSalem01](https://images.weserv.nl/?url=github.com/SanaSalem01.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/SanaSalem01)
-[![manojava-gk](https://images.weserv.nl/?url=github.com/manojava-gk.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/manojava-gk)
 [![sonama](https://images.weserv.nl/?url=github.com/sonama.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/sonama)
 [![Usmanfee](https://images.weserv.nl/?url=github.com/Usmanfee.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/Usmanfee)
 [![kkotowiczz](https://images.weserv.nl/?url=github.com/kkotowiczz.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/kkotowiczz)
@@ -137,8 +136,8 @@ Most of the features are linked to product specific issues. Please have a look o
 ### Updated
 
 :::note
-- The product `Release Check` [issues](https://github.com/eclipse-tractusx/sig-release/issues?q=is%3Aissue%20state%3Aopen%20milestone%3A25.09%20%22Release%20Checks%22) for each product have been updated to reflect the new versions of the components included in this release. Please refer to these issues for detailed information on the updates.
-- The KITs `Release Check` [issues](https://github.com/eclipse-tractusx/sig-release/issues?q=is%3Aissue%20state%3Aopen%20label%3Akit%20%22Release%20Check%22) were also updated.
+- The product `Release Check` [issues](https://github.com/eclipse-tractusx/sig-release/issues?q=is%3Aissue%20milestone%3A25.09%20%22Release%20Checks%22) for each product have been updated to reflect the new versions of the components included in this release. Please refer to these issues for detailed information on the updates.
+- The KITs `Release Check` [issues](https://github.com/eclipse-tractusx/sig-release/issues?q=is%3Aissue%20label%3Akit%20%22Release%20Checks%22%20milestone%3A25.09) were also updated.
 :::
 
 | Component                                                                                                                                             |                                                                                             Helm Chart (s)                                                                                              |                                                                                                                                                                                        App-/KIT Version (s)                                                                                                                                                                                        |
