Update contributor notes in release 25.09 documentation

--- a/blog-changelog/2025-09-29-release-25-09.md
+++ b/blog-changelog/2025-09-29-release-25-09.md
@@ -115,8 +115,10 @@ Our community and results/releases depends on our contributors. **We want to tha
 
 :::note
 
-The above list contains all contributors and committers that have been involved in this release. The list is generated automatically based on the contributions to the repositories of the Eclipse Tractus-X organization on GitHub.
-It's not only about code contributions, but also about reporting issues, discussing solutions, writing documentation, or reviewing contributions.
+The above list contains all contributors and committers that have been involved in this release. The list is generated automatically based on the amount of contributions to the [repositories](https://github.com/orgs/eclipse-tractusx/repositories)
+of the [Eclipse Tractus-X organization](https://github.com/eclipse-tractusx) on GitHub.
+
+**It's not only about code contributions**, but also about reporting issues, discussing solutions, writing documentation, or reviewing contributions.
 
 :::
 
