Update release notes for 25.09 with additional notes and tips

--- a/blog-changelog/2025-09-29-release-25-09.md
+++ b/blog-changelog/2025-09-29-release-25-09.md
@@ -125,8 +125,10 @@ of the [Eclipse Tractus-X organization](https://github.com/eclipse-tractusx) on 
 ### Highlights
 
 :::note
+
 The planned and implemented features can be found in the [sig-release issue list](https://github.com/eclipse-tractusx/sig-release/issues?q=is%3Aissue%20milestone%3A25.09) (filtered by milestone `25.09`). These features describe only the requested new function/functionality.
 Most of the features are linked to product specific issues. Please have a look on product specific repositories for detailed information on the product specific issues tabs.
+
 :::
 
 ### Added
@@ -138,8 +140,10 @@ Most of the features are linked to product specific issues. Please have a look o
 ### Updated
 
 :::note
+
 - The product `Release Check` [issues](https://github.com/eclipse-tractusx/sig-release/issues?q=is%3Aissue%20milestone%3A25.09%20%22Release%20Checks%22) for each product have been updated to reflect the new versions of the components included in this release. Please refer to these issues for detailed information on the updates.
 - The KITs `Release Check` [issues](https://github.com/eclipse-tractusx/sig-release/issues?q=is%3Aissue%20label%3Akit%20%22Release%20Checks%22%20milestone%3A25.09) were also updated.
+
 :::
 
 | Component                                                                                                                                             |                                                                                             Helm Chart (s)                                                                                              |                                                                                                                                                                                        App-/KIT Version (s)                                                                                                                                                                                        |
@@ -199,7 +203,11 @@ The following runtime has been used during end-to-end test:
   - EDC version [0.11.0](https://github.com/eclipse-tractusx/tractusx-edc/releases/tag/0.11.0)
   - DTR version [0.9.0](https://github.com/eclipse-tractusx/sldt-digital-twin-registry/releases/tag/v0.9.0)
 
-Note: Tractus-X EDC has been tested on both Postgresql versions: 15.x and 16.x
+:::note
+
+Tractus-X EDC has been tested on both Postgresql versions: 15.x and 16.x
+
+:::
 
 ### Using helm with central helm registry
 
@@ -217,20 +225,25 @@ The official Bitnami Helm chart repository has been deprecated or is no longer m
 container images to a new repository called `bitnamilegacy`. Helm charts using Bitnami container images must be updated to reference this new source
 to ensure continued functionality. With `bitnamilegacy` we won’t receive security updates.
 
+:::tip
+
 If you are using a provided helm chart from Eclipse Tractus-X that uses Bitnami container images and it doesn't work, please check the values.yaml file of the respective chart
 and update/overwrite the image repository from `bitnami/<image-name>` to `bitnamilegacy/<image-name>`.
 
-Extract from `values.yaml`:
-```yaml
+:::
 
+Extract from `values.yaml`:
+
+```yaml
 postgresql:
   image:
     # -- workaround to use bitnamilegacy chart
     repository: bitnamilegacy/postgresql
     tag: 15.4.0-debian-11-r45
-
 ```
 
 :::tip
+
 For installation details, please see the referenced Repositories / Releases and related documentation (e.g. migration documentation)
+
 :::
